<resources>
    <string name="app_name">Simple Toolkit</string>
    <string name="curconvert_desc">Digital clock</string>
    <string name="curconvert_open_btn">Open digital clock</string>
    <string name="btn_convert_text">Convert</string>
    <string name="default_time">00:00:00</string>
    <string name="tz_spinner_desc">Time zone</string>
    <string name="cur_weather_desc_text">Current weather</string>
    <string name="btn_go_cur_weather_text">Show current weather</string>
    <string name="todo">TODO</string>
    <string name="city_name_placeholder">City Name</string>
    <string name="temp_placeholder">0</string>
    <string name="api_key_desc">API Key</string>
    <string name="weather_settings_group">Weather forecast</string>
    <string name="save_btn_weather_settings">Save</string>
    <string name="api_key_succ_save">Saved successfully</string>
    <string name="gps_perm_not_granted">Location permission is not granted</string>
    <string name="city_not_found_text">City not found</string>
    <string name="city_error_text">Can\'t get city name</string>
    <string name="api_key_not_found_text">API Key not found</string>
    <string name="error_text">Error</string>
    <string name="weather_placeholder">Weather</string>
    <string name="lang">en</string>
    <string name="feels_like">Feels like</string>
    <string name="min_temp">Minimum temperature</string>
    <string name="max_temp">Maximum temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="open_calendar_desc">Open calendar</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
</resources>