<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_800"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/back_btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue_grey_800"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_api_key"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="394dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/api_key_desc"
        android:textColor="@color/blue_grey_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/weather_settings_group_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_settings_group"
        android:textColor="@color/blue_grey_200"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/btn_save_api_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn_weather_settings"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />
</androidx.constraintlayout.widget.ConstraintLayout>